updated readme to match backend, added api routes, and updated landing template

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p To Alex Ng's portfolio website back-end server
+  a(href="https://www.alex-ng.com") See the front end here!
+  br
+  a(href="https://github.com/aa-ng/portfolio-website-back") Back-end github repo
+  p To view the api go to the <a href='/api'>/api</a> endpoint
